# sparse-merkle-tree-server-client

./: Cargo.toml  README.md
.cargo/: config.toml
crates/changer/: Cargo.toml
crates/changer/src/: main.rs
crates/leaf_changer/: Cargo.toml
crates/leaf_changer/src/: main.rs
crates/tree_keeper/: Cargo.toml
crates/tree_keeper/src/: main.rs
src/: lib.rs  protocol.rs  sparse_merkle_tree.rs
