[package]
name = "poly_project"
version = "0.0.0"
authors = [
    "cyphersnake cyphersnake@pm.me",
]
edition = "2021"
license = "MIT"


[[bin]]
name = "tree_keeper"
path = "src/tree_keeper.rs"

[[bin]]
name = "changer"
path = "src/changer.rs"

[dependencies]
itertools = "0.13.0"
rand = "0.8.5"
serde = "1.0.214"
sha3 = "0.10.8"
tracing = "0.1.40"

[dev-dependencies]
tracing-test = "0.2.5"
