[package]
name = "poly_project"
version = "0.0.0"
authors = [
    "cyphersnake cyphersnake@pm.me",
]
edition = "2021"
license = "MIT"

[workspace]
members = ["crates/*"]

[dependencies]
bincode = "1.3.3"
itertools = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
sha3 = "0.10.8"
tracing = "0.1.40"

[dev-dependencies]
tracing-test = "0.2.5"
