[package]
name = "sparse_merkle_tree_server_client"
version = "0.0.0"
authors = [
    "cyphersnake cyphersnake@pm.me",
]
edition = "2021"
license = "MIT"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

[dependencies]
bincode = "1.3.3"
itertools = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
sha3 = "0.10.8"
tracing = { workspace = true }

[dev-dependencies]
tracing-test = "0.2.5"
